--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
 		}
 	],
     "require": {
-        "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "*",
-        "facebook/php-sdk-v4" : "4.*"
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.3",
